# lfa

./: CMakeLists.txt  GLC-Reduzida.txt  glc_norm  glc_norm_outdated.cpp  log.txt  readme.md
inputs/: GLC-Completa.txt  GLC_TESTE.txt  GLC_TST2  guigui.txt
src/: glc_norm_v2.cpp  grammar.hpp  io_handling.cpp  io_handling.hpp  utility.cpp  utility.hpp
